-Added visual logic to the button in Menu page (Button is disabled by default and it will be enabled when at least one image card is selected) -Tweaked the letter spacing on the header of lots of pages -Removed the "View Order" in Home page since there's no longer an Order page (fused with Menu page)

--- a/project3444FrontEnd/src/pages/About/aboutus.css
+++ b/project3444FrontEnd/src/pages/About/aboutus.css
@@ -21,6 +21,7 @@
 .app__aboutus-header h1{
     font-size: 50px;
     text-transform: uppercase;
+    letter-spacing: 0.04rem;
 }
 
 .app__aboutus-content{
