--- a/project3444FrontEnd/src/pages/Home/Home.css
+++ b/project3444FrontEnd/src/pages/Home/Home.css
@@ -2,7 +2,7 @@
 .full-page{
     display: flex;
     flex-direction: column;
-    color:white;
+    color:black;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -32,6 +32,9 @@
     margin-bottom: 0px;
     padding: 0 0;
 }
+.Logo h1{
+    color: white;
+}
 .Logo-p{
     display: flex;
     font-size: xx-large;
@@ -41,6 +44,8 @@
     padding-top: 0;
     /* margin-top: -15px; */
     margin-bottom: 5px;
+    color: white;
+    letter-spacing: 0.04rem;
 }
 .button-space{
     display: flex;
@@ -61,15 +66,19 @@
     display: flex; 
     justify-content: flex-end;
 }
-.right-button button, .left-button button{
+.left-button button{
     font-size: 20px;
     height: 3rem;
     width: 9rem;
     border-radius: 12px;
-    font-family: Times, Times New Roman, serif;
+    /* font-family: Times, Times New Roman, serif; */
     cursor: pointer;
     background-color: rgba(232, 225, 173, 1);
     border: none;
+    transition: 0.2s ease;
+}
+.left-button button:hover{
+    outline: 4px solid rgb(208, 187, 150);
 }
 
 .hdash{
